--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test deps.
-        run: pip3 install molecule docker yamllint ansible-lint
+        run: pip3 install molecule molecule-docker docker yamllint ansible-lint
 
       - name: Run molecule tests.
         run: molecule test
