solve linting for github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,5 @@ jobs:
 
       - name: Run molecule tests.
         run: molecule test
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
